--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
         const initFirebase = () => {
             if (!Object.keys(firebaseConfig).length) {
-                console.error("Firebase config is missing.");
+                console.error("Firebase config is missing. Cannot connect to Firestore.");
+                isAuthReady = true; // Still allow the app to render the form
+                renderApp();
                 return;
             }
 
@@ -221,7 +223,7 @@
             }
 
             if (!db || !appUserId) {
-                appState.message = '데이터베이스 연결 또는 인증 정보를 불러오는 중입니다. 잠시 후 다시 시도해 주세요.';
+                appState.message = '데이터베이스 연결이 되지 않았습니다. 입력 양식만 사용 가능합니다.';
                 appState.isSubmitting = false;
                 renderApp();
                 return;
